# mic-speaker-demo

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  audio.c  filters.c  idf_component.yml  main.c  media.c  mic.c
main/includes/: audio.h  filters.h  media.h  mic.h  utils.h
